--- a/index.html
+++ b/index.html
@@ -1,39 +1,44 @@
-
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>مساعد المعلم الذكي</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700&display=swap" rel="stylesheet">
-    <style>
-      body {
-        font-family: 'Tajawal', sans-serif;
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>مساعد المعلم الذكي</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Tajawal', sans-serif;
+    }
+
+    @media print {
+      body * {
+        visibility: hidden;
       }
-      @media print {
-        body * {
-          visibility: hidden;
-        }
-        #report-content-wrapper, #report-content-wrapper * {
-          visibility: visible;
-        }
-        #report-content-wrapper {
-          position: absolute;
-          left: 0;
-          top: 0;
-          width: 100%;
-          padding: 2rem;
-          font-size: 12pt;
-        }
-        #report-content-wrapper button {
-          display: none;
-        }
+
+      #report-content-wrapper,
+      #report-content-wrapper * {
+        visibility: visible;
       }
-    </style>
+
+      #report-content-wrapper {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        padding: 2rem;
+        font-size: 12pt;
+      }
+
+      #report-content-wrapper button {
+        display: none;
+      }
+    }
+  </style>
   <script type="importmap">
 {
   "imports": {
@@ -44,10 +49,11 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
 </head>
-  <body class="bg-slate-50">
-    <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
-  </body>
+
+<body class="bg-slate-50">
+  <div id="root"></div>
+  <script type="module" src="/index.tsx"></script>
+</body>
+
 </html>
