--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 <body class="bg-slate-50">
   <div id="root"></div>
-  <script type="module" src="/index.tsx"></script>
+  <script type="module" src="./index.tsx"></script>
 </body>
 
 </html>
